# salt-amt-calculator

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  app.py.bak  baseline_impacts.py  budget_window_impacts.py  calculator.py  chart.py  constants.py  household_examples.py  inputs.py  introduction _old.py  introduction.py  policy_config.py  policy_parameters.py  reforms.py  requirements.txt  situation.py  table.py  test.md  vercel.json
.github/workflow/: push.yaml
.github/workflows/: deploy.yml  pr.yaml  push.yaml
.streamlit/: config.toml  custom.css
api/: modal_app.py  pyproject.toml
api/salt_amt_api/: __init__.py  models.py
api/salt_amt_api/simulation/: __init__.py  calculation.py  reforms.py  situation.py
api/tests/: __init__.py  test_reforms.py  test_situation.py
case_studies/: household_amt.ipynb
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  designTokens.ts  theme.ts
nationwide_impacts/: charts.py  impacts.py  tables.py
nationwide_impacts/data/: baseline_deficit.csv  budget_window_impacts.csv  budget_window_impacts_temporary.csv  impacts.csv  raw_budget_window_metrics.csv  raw_metrics.csv  single_year_impacts copy.csv  single_year_impacts.csv
nationwide_impacts/notebooks/: baseline_imapct_values.ipynb  calculate_2026_impacts.ipynb  (+2 more)
personal_calculator/: calculator.py  chart.py  household_examples.py  inputs.py  policy_parameters.py  reforms.py  salt_cap_calculator.py  situation.py  subsidy_rate.py  table.py
(+108 files in other folders)
